--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.7.17",
     "@angular/animations": "~8.2.12",
     "@angular/common": "~8.2.12",
     "@angular/compiler": "~8.2.12",
@@ -19,6 +20,24 @@
     "@angular/platform-browser": "~8.2.12",
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
+    "@types/chart.js": "^2.9.2",
+    "angular-bootstrap-md": "^8.7.0",
+    "angular-fusioncharts": "^3.0.4",
+    "angular-google-charts": "^0.1.6",
+    "angular-highcharts": "^8.0.3",
+    "bootstrap": "^4.4.0",
+    "chart.js": "^2.5.0",
+    "fullcalendar": "^3.10.1",
+    "fusioncharts": "^3.15.0-sr.1",
+    "highcharts": "^8.0.0",
+    "highcharts-angular": "^2.4.0",
+    "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.4.1",
+    "jspdf": "^1.4.1",
+    "jw-angular-pagination": "^1.1.0",
+    "moment": "^2.24.0",
+    "ngx-bootstrap": "^5.2.0",
+    "ngx-toastr": "^11.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -28,9 +47,10 @@
     "@angular/cli": "~8.3.15",
     "@angular/compiler-cli": "~8.2.12",
     "@angular/language-service": "~8.2.12",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.31",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
